--- a/idf_component.yml
+++ b/idf_component.yml
@@ -1,5 +1,5 @@
 # Version of the component [Required, if not passed during upload]
-# version: "0.0.1"
+version: "1.0.0"
 # Short description for the project [Recommended]
 description: esp32 OTA Component to update firmware from Github Releases
 # Github repo or a home  [Recommended]
@@ -7,9 +7,12 @@ url: https://github.com/Fishwaldo/esp_ghota
 
 # List of dependencies [Optional]
 # All dependencies of the component should be published in the same registry.
-#dependencies:
+dependencies:
   # Default namespace is `espressif`
   # Declaring dependency as `cool_component` is the same as `espressif/cool_component`
   #cool_component: ">1.0.0"
   #some_ns/some_component:
   #  version: "~1.2.7"
+  ## Required IDF version
+  idf:
+    version: ">=4.4.0"
