Solve the source code compilation error：stringop-truncation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,5 @@ idf_component_register(SRCS "${srcs}"
                     INCLUDE_DIRS "include"
                     PRIV_REQUIRES ${priv_requires}
                     REQUIRES ${requires})
+
+set_source_files_properties("src/esp_ghota.c"  COMPILE_FLAGS "-Wno-stringop-truncation")
